# moxi

./: .gitignore  Cargo.toml  LICENSE  MOCHI_LANG.md  MOXI_LANG.md  README.md  SHOW.md  SKILL.md  UPDATE_NOTES.md
examples/: _draft.mi  checkers.mi  clone_rotate.moxi  donut.mi  forest.moxi  forest_merge.mi  multi_layers.mochi  multi_layers.moxi  test.moxi  test_param.moxi  tree.mochi
examples/legacy/: tree.mi
legacy/examples/: clone_rotate.mi
scripts/: ISLAND.md  SKELETON.md
src/: bevy_viewer.rs  colors.rs  error.rs  export.rs  generator.rs  geom.rs  lib.rs  main.rs  parser.rs  relation_resolver.rs  types.rs  viewer.rs
src/ast/: mod.rs
src/geometry/: mod.rs
src/legacy/: mod.rs  voxgrid.rs
src/lexer/: mod.rs  token.rs
src/mochi/: commands.rs  mod.rs  parser.rs  runtime.rs
src/moxi/: commands.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
src/moxi/parser/: ast.rs  expr.rs  mod.rs  stmt.rs  voxel.rs
src/moxi/runtime/: ast_collect.rs  builtins.rs  eval.rs  expand.rs  helpers.rs  mod.rs  model_eval.rs  util.rs
src/parser/: mod.rs
src/resolver/: mod.rs
src/voxel/: mod.rs
