[package]
name = "moxi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moxi"
path = "src/main.rs"

[lib]
name = "moxi_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bevy = { version = "0.13", optional = true }
unicode-segmentation = "1.11"

[features]
viewer = ["bevy"]