[package]
name    = "moxi"
version = "0.2.0"
edition = "2021"
authors = ["Andrew Garcia"]
description = "Moxi v2 — semantic spatial description language for 3D worlds"
license = "Apache-2.0"
repository = "https://github.com/moxilang/moxi"

[[bin]]
name = "moxi"
path = "src/main.rs"

[lib]
name = "moxi_lib"
path = "src/lib.rs"

[dependencies]
anyhow     = "1.0"
clap       = { version = "4.4", features = ["derive"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"

# Bevy is optional — only compiled with:  cargo build --features viewer
bevy = { version = "0.13", optional = true }

[features]
viewer = ["bevy"]